layout footer and buttons

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
           </p>
         </div>
       </div>
+
+
+
       <!-- ------------------------------------ -->
       <div class="midsection-StayProd">
         <img
@@ -148,7 +151,7 @@
             />
             <div class="card_profile-credits">
               <strong>Satish Patel</strong> <br />
-              <h3>Founder & CEO, Huddle</h3>
+              <h5>Founder & CEO, Huddle</h5>
             </div>
           </div>
         </div>
@@ -165,9 +168,9 @@
               class="card_profile-pic"
               alt="Mr. McKenzie"
             />
-            <div>
+          <div class="card_profile-credits">
               <strong>Bruce McKenzie</strong> <br />
-              Founder & CEO, Huddle
+              <h5>Founder & CEO, Huddle</h5>
             </div>
           </div>
         </div>
@@ -184,9 +187,9 @@
               class="card_profile-pic"
               alt="Ms. Boyld"
             />
-            <div>
+            <div class="card_profile-credits">
               <strong>Iva Boyd</strong> <br />
-              Founder & CEO, Huddle
+              <h5>Founder & CEO, Huddle</h5>
             </div>
           </div>
         </div>
